[package]
name = "tbh-monitor"
version = "0.1.0"
edition = "2021"
description = "TBH Monitor - TaskbarHero Background Monitor"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes = "0.8"
cbc = "0.1"
cipher = { version = "0.4", features = ["block-padding", "alloc"] }
pbkdf2 = { version = "0.12", features = ["hmac"] }
hmac = "0.12"
sha1 = "0.10"
qrcode = "0.14"
image = "0.25"
dirs = "6"
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
